storage-iSCSI-multipath/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "apiProfile": "2019-03-01-hybrid",
  "parameters": {
    "WindowsImageSKU": {
      "defaultValue": "2019-Datacenter",
      "allowedValues": [ "2016-Datacenter","2019-Datacenter" ],
      "type": "string",
      "metadata": {
        "description": "Please select the base Windows VM image"
      }
    },   
    "VMSize": {
      "defaultValue": "Standard_F8s_v2",
      "allowedValues": ["Standard_A4_v2", "Standard_DS3_v2","Standard_DS4_v2","Standard_F8s_v2","Standard_F16s_v2" ],
      "type": "string",
      "metadata": {
        "description": "Please select the VM size"
      }
    },
    "VMName": {
      "defaultValue": "FileServer",
      "type": "string",
      "metadata": {
        "description": "VM name"
      }
    },
    "adminUsername": {
      "defaultValue": "storageadmin",
      "type": "string",
      "metadata": {
        "description": "The name of the Administrator of the new VMs"
      }
    },
    "adminPassword": {
      "defaultValue": "[subscription().subscriptionId]",
      "type": "securestring",
      "metadata": {
        "description": "The password for the Administrator account of the new VMs. Default value is subscription id"
      }
    },
    "VNetName": {
      "defaultValue":"Storage",
      "type": "string",
      "metadata": {
        "description": "The name of VNet.  This will be used to label the resources"
      }
    },
    "VNetAddressSpace": {
      "defaultValue":"10.10.0.0/23",
      "type": "string",
      "metadata": {
        "description": "Address Space for VNet"
      }
    },
    "VNetInternalSubnetName": {
      "defaultValue": "Internal",
      "type": "string",
      "metadata": {
        "description": "VNet Internal Subnet Name"
      }
    },
    "VNetInternalSubnetRange": {
      "defaultValue":"10.10.1.0/24",
      "type": "string",
      "metadata": {
        "description": "Address Range for VNet Internal Subnet"
      }      
    },  
    "InternalVNetIP": {
      "defaultValue":"10.10.1.4",
      "type": "string",
      "metadata": {
        "description": "Static Address for the internal IP of the File Server. "
      }
    },
    "VNetStorageSubnetRange": {
      "defaultValue":"10.10.0.0/24",
      "type": "string",
      "metadata": {
        "description": "Storage Subnet Range"
      }
    },
    "iSCSIStorageIP1": {
      "defaultValue":"10.10.0.4",
      "type": "string",
      "metadata": {
        "description": "Static Address for the iSCSI adapter 1"
      }
    },
    "iSCSIStorageIP2": {
      "defaultValue":"10.10.0.5",
      "type": "string",
      "metadata": {
        "description": "Static Address for the iSCSI adapter 2 "
      }
    },
    "_artifactsLocation": {
      "defaultValue": "https://raw.githubusercontent.com/lucidqdreams/azure-intelligent-edge-patterns/master/storage-iSCSI/",
      "type": "string",
      "metadata": {
        "description": "The location of resources, such as templates and DSC modules, that the template depends on"
      }
    },
    "_artifactsLocationSasToken": {
      "defaultValue": "",
      "type": "securestring",
      "metadata": {
        "description": "Auto-generated token to access _artifactsLocation"
      }
    }
  },

  "variables": {
    "computeApiVersion": "2017-12-01",

    "WindowsImageSKU": "[parameters('WindowsImageSKU')]",
    "storageAccountType": "Standard_LRS",
    "ManagedOSDiskType": "Premium_LRS",
    "storageName": "[concat('sa', uniquestring(resourceGroup().id))]",
    "VMSize": "[parameters('VMSize')]",    
    "windowsImagePublisher": "MicrosoftWindowsServer",
    "windowsImageOffer": "WindowsServer",
    "windowsImageVersion": "latest",   
    "VMName": "[parameters('VMName')]",

    "VNet": "[parameters('VNetName')]",
    "VNetInternalSubnetName": "[parameters('VNetInternalSubnetName')]",
    "VNetAddressSpace": "[parameters('VNetAddressSpace')]",
    "VNetStorageSubnetRange": "[parameters('VNetStorageSubnetRange')]",
    "VNetInternalSubnetRange": "[parameters('VNetInternalSubnetRange')]",
    "InternalVNetIP": "[parameters('InternalVNetIP')]",
    
    "iSCSISubnetName": "iSCSI",            
    "VNetName": "[concat(variables('VNet'),'-vnet' )]",
    "vnetID": "[resourceId('Microsoft.Network/virtualNetworks', variables('VNetName'))]",
    "StorageSubnetRefVNet": "[concat(variables('vnetID'),'/subnets/',variables('iSCSISubnetName'))]",
    "InternalSubnetRefVNet": "[concat(variables('vnetID'),'/subnets/',variables('VNetInternalSubnetName'))]",
    "StoragensgName": "[concat(parameters('VNetName'),'-',variables('iSCSISubnetName'),'-nsg' )]",
    "StoragensgID": "[resourceId('Microsoft.Network/networkSecurityGroups',variables('StoragensgName'))]",    
    "NICPrefixVNet": "Storage",
    "VNetStoragePIPName1": "[concat(variables('VNet'),'-',variables('iSCSISubnetName'),'-pip1')]",  
    "VNetStoragePIPName2": "[concat(variables('VNet'),'-',variables('iSCSISubnetName'),'-pip2')]",    

    "ConfigureVMDSC": "[concat(parameters('_artifactsLocation'), 'DSC/ConfigureVM.zip', parameters('_artifactsLocationSasToken'))]",
    "ConfigureVM": "ConfigureVM.ps1\\ConfigureVM",

    "scriptfilename": "Prepare-iSCSIClient.ps1",
    "scriptDirectory": "Scripts/",
    "scriptfilepath": "[concat(parameters('_artifactsLocation'), concat(variables('scriptDirectory'),variables('scriptfilename')), parameters('_artifactsLocationSasToken'))]"
  },

  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('StoragensgName')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "RDP",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 130,
              "direction": "Inbound"
            }
          },
          {
            "name": "860iSCSI",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "860",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 140,
              "direction": "Inbound"
            }
          },
          {
            "name": "3260iSCSI",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3260",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Storage/storageAccounts",
      "name": "[variables('storageName')]",
      "location": "[resourceGroup().location]",
      "sku": {
        "name": "[variables('storageAccountType')]"
      },
      "kind": "Storage"    
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('VNetName')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('VNetAddressSpace')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('iSCSISubnetName')]",
            "properties": {
              "addressPrefix": "[variables('VNetStorageSubnetRange')]",
              "networkSecurityGroup": {
                "id": "[variables('StoragensgID')]"
              }              
            }
          },
          {
            "name": "[variables('VNetInternalSubnetName')]",
            "properties": {
              "addressPrefix": "[variables('VNetInternalSubnetRange')]"
              }
            }
        ]
      },
      "dependsOn": [
        "[variables('StoragensgID')]"
      ]
    }, 
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[variables('VNetStoragePIPName1')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "publicIPAllocationMethod": "Static"
      },
      "dependsOn": [
        "[variables('vnetID')]"
      ]
    },
     {
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[variables('VNetStoragePIPName2')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "publicIPAllocationMethod": "Static"
      },
      "dependsOn": [
        "[variables('vnetID')]"
      ]
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[concat(variables('NICPrefixVNet'),'-',variables('iSCSISubnetName'),'-nic1')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "enableIPForwarding":true,  
        "ipConfigurations": [
           {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "[parameters('iSCSIStorageIP1')]",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('VNetStoragePIPName1'))]"
              },
              "subnet": {
                "id": "[variables('StorageSubnetRefVNet')]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[variables('vnetID')]",
        "[resourceId('Microsoft.Network/publicIPAddresses',variables('VNetStoragePIPName1'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[concat(variables('NICPrefixVNet'),'-',variables('iSCSISubnetName'),'-nic2')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "enableIPForwarding":true,  
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "[parameters('iSCSIStorageIP2')]",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('VNetStoragePIPName2'))]"
              },
              "subnet": {
                "id": "[variables('StorageSubnetRefVNet')]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[variables('vnetID')]",
        "[resourceId('Microsoft.Network/publicIPAddresses',variables('VNetStoragePIPName2'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[concat(variables('NICPrefixVNet'),'-', variables('VNetInternalSubnetName'),'-nic')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "enableIPForwarding":true,
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "[variables('InternalVNetIP')]",
              "subnet": {
                "id": "[variables('InternalSubnetRefVNet')]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[variables('vnetID')]"
      ]
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "name": "[concat(variables('VMName'))]",
      "location": "[resourceGroup().location]",
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('vmSize')]"
      },
      "osProfile": {
        "computerName": "[concat(variables('VMName'))]",
        "adminUsername": "[parameters('adminUsername')]",
        "adminPassword": "[parameters('adminPassword')]",
          "windowsConfiguration": {
            "provisionVmAgent": "true"
          }
      },
      "storageProfile": { 
        "imageReference": {
          "publisher": "[variables('windowsImagePublisher')]",
          "offer": "[variables('windowsImageOffer')]",
          "sku": "[variables('windowsImageSKU')]",
          "version": "[variables('windowsImageVersion')]"
        },
        "osDisk": {
          "name": "[concat(variables('VMName'), '1-osdisk')]",
          "managedDisk": {
            "storageAccountType": "[variables('ManagedOSDiskType')]"
          }, 
          "caching": "ReadWrite",
          "createOption": "FromImage"
          }
        },        
        "networkProfile": {
          "networkInterfaces": [
            {
              "properties": {
                "primary": true
              },
              "id": "[resourceId('Microsoft.Network/networkInterfaces',concat(variables('NICPrefixVNet'),'-',variables('iSCSISubnetName'),'-nic1'))]"
            },
            {
              "properties": {
                "primary": false
              },
              "id": "[resourceId('Microsoft.Network/networkInterfaces',concat(variables('NICPrefixVNet'),'-',variables('iSCSISubnetName'),'-nic2'))]"
            },
            {
              "properties": {
                "primary": false
              },
              "id": "[resourceId('Microsoft.Network/networkInterfaces',concat(variables('NICPrefixVNet'),'-', variables('VNetInternalSubnetName'),'-nic'))]"
            }
          ]
        },
        "licenseType": "Windows_Server",
          "diagnosticsProfile": {
          "bootDiagnostics": {
              "enabled": true,
              "storageUri": "[reference(resourceId(resourcegroup().name, 'Microsoft.Storage/storageAccounts', variables('storageName')), '2015-06-15').primaryEndpoints['blob']]"
          }
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces',concat(variables('NICPrefixVNet'),'-',variables('iSCSISubnetName'),'-nic1'))]",
        "[resourceId('Microsoft.Network/networkInterfaces',concat(variables('NICPrefixVNet'),'-',variables('iSCSISubnetName'),'-nic2'))]",
        "[resourceId('Microsoft.Network/networkInterfaces',concat(variables('NICPrefixVNet'), '-', variables('VNetInternalSubnetName'),'-nic'))]",
        "[resourceId('Microsoft.Storage/storageAccounts',concat(variables('storageName')))]"
      ]       
    },
    {
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "name": "[concat(variables('VMName'), '/ConfigureiSCSI')]",
      "apiversion": "[variables('computeApiVersion')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "publisher": "Microsoft.Compute",
        "type": "CustomScriptExtension",
        "typeHandlerVersion": "1.8",
        "autoUpgradeMinorVersion": true,
        "settings": {
          "fileUris": [
              "[variables('scriptFilepath')]"
          ],
          "commandToExecute": "[concat('powershell -ExecutionPolicy Unrestricted -file ',variables('scriptFilename') )]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Compute/virtualMachines',concat(concat(variables('VMName'))))]"
      ]     
    },
    {
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "name": "[concat(variables('VMName'), '/ConfigureVM')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "ConfigureVM"
      },
      "properties": {
        "publisher": "Microsoft.Powershell",
        "type": "DSC",
        "typeHandlerVersion": "2.77",
        "autoUpgradeMinorVersion": true,
        "settings": {
          "modulesUrl": "[variables('ConfigureVMDSC')]",
          "configurationFunction": "[variables('ConfigureVM')]"
        },
        "protectedSettings": {
          "Items": {
          }
        }
      },
      "dependsOn": [
         "[resourceId('Microsoft.Compute/virtualMachines/extensions',variables('VMName'), 'ConfigureiSCSI')]"
      ]
    }
  ],
  "outputs": {
     "VMName": {
      "type": "string",
      "value": "[variables('VMName')]"
    },
    "StorageEndpoint1": {
        "value": "[reference(concat('Microsoft.Network/publicIPAddresses/', variables('VNetStoragePIPName1')), '2016-03-30').ipaddress]",
        "type" : "string"
    },
    "StorageEndpoint2": {
        "value": "[reference(concat('Microsoft.Network/publicIPAddresses/', variables('VNetStoragePIPName2')), '2016-03-30').ipaddress]",
        "type" : "string"
    },
    "LocalVNetAddressSpace": {
      "type": "string",
      "value": "[variables('VNetAddressSpace')]"
    },
    "adminUsername": {
      "type": "string",
      "value": "[parameters('adminUsername')]"
    },
    "VNet": {
      "type": "string",
      "value": "[variables('VNetName')]"
    },
    "InternalRefVNet":{
      "type": "string",
      "value": "[resourceId('Microsoft.Network/virtualNetworks', variables('VNetName'))]"
    },
    "VNetInternalSubnetName": {
      "type": "string",
      "value": "[variables('VNetInternalSubnetName')]"
    },
    "InternalSubnetRefVNet":{
      "type": "string",
      "value": "[variables('InternalSubnetRefVNet')]"
    },
    "InternalSubnetIP":{
      "type": "string",
      "value": "[variables('InternalVNetIP')]"
    }
  }
}
